Fix the submit button issue on mobile view
This commit makes the `padding` on all sides for the submit button the
same which is 15px. This way, the text doesn't become two lines on 360px
screen width.

--- a/css/style.css
+++ b/css/style.css
@@ -454,7 +454,7 @@ svg path {
   box-shadow: inset 0 -0.25rem 0 rgba(0, 0, 0, 0.09);
   background-color: #38cc8c;
   cursor: pointer;
-  padding: 0.9375rem 2.75rem;
+  padding: 0.9375rem;
   width: 100%;
   text-transform: uppercase;
   color: white;
