--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -141,7 +141,7 @@ $-hero-gap: rem(45);
   box-shadow: inset 0 rem(-4) 0 rgba(0, 0, 0, 0.09);
   background-color: $green;
   cursor: pointer;
-  padding: rem(15) rem(44);
+  padding: rem(15);
   width: 100%;
   text-transform: uppercase;
   color: $white;
